Make some more stuff work in the launcher dialogs.

--- a/plugins/launcher/Makefile.am
+++ b/plugins/launcher/Makefile.am
@@ -29,6 +29,7 @@ liblauncher_la_CFLAGS = \
 	$(GTK_CFLAGS) \
 	$(LIBXFCE4UTIL_CFLAGS) \
 	$(LIBXFCE4UI_CFLAGS) \
+	$(LIBXFCE4MENU_CFLAGS) \
 	$(EXO_CFLAGS) \
 	$(XFCONF_CFLAGS) \
 	$(LIBSTARTUP_NOTIFICATION_CFLAGS) \
@@ -45,6 +46,7 @@ liblauncher_la_LIBADD = \
 	$(GTK_LIBS) \
 	$(LIBXFCE4UTIL_LIBS) \
 	$(LIBXFCE4UI_LIBS) \
+	$(LIBXFCE4MENU_LIBS) \
 	$(EXO_LIBS) \
 	$(XFCONF_LIBS) \
 	$(LIBSTARTUP_NOTIFICATION_LIBS)
