Use XfceMenuItem's for all the internal items.
We use the XfceMenuItemPool to quickly lookup the desktop id's.
The advantage of this is that libxfce4menu does a lot of work for
us and since the desktop id's are stored, we're not fixed to the
file location, so we will pickup changes in
~/.local/share/applications too.

--- a/plugins/launcher/Makefile.am
+++ b/plugins/launcher/Makefile.am
@@ -3,6 +3,7 @@
 INCLUDES = \
 	-I$(top_srcdir) \
 	-DBINDIR=\"$(bindir)\" \
+	-DSYSCONFDIR=\"$(sysconfdir)\" \
 	-DG_LOG_DOMAIN=\"liblauncher\" \
 	-DSN_API_NOT_YET_FROZEN \
 	-DEXO_API_SUBJECT_TO_CHANGE \
@@ -76,8 +77,15 @@ launcher.desktop.in: $(desktop_in_in_files)
 desktop_DATA = $(desktop_in_files:.desktop.in=.desktop)
 @INTLTOOL_DESKTOP_RULE@
 
+#
+# .menu file
+#
+menudir = $(sysconfdir)/xdg/menus
+menu_DATA = launcher.menu
+
 EXTRA_DIST = \
 	launcher-dialog.glade \
+	$(menu_DATA) \
 	$(desktop_in_in_files)
 
 DISTCLEANFILES = \
