Initial launcher code

--- a/panel-preferences.desktop.in
+++ b/panel-preferences.desktop.in
@@ -9,6 +9,5 @@ Categories=X-XFCE;Settings;DesktopSettings;
 OnlyShowIn=XFCE;
 Terminal=false
 StartupNotify=true
-_GenericName=Panel Preferences
-_Name=Xfce 4 Panel Preferences
+_Name=Panel Preferences
 _Comment=Customize the Xfce Panel
