--- a/libxfce4panel/Makefile.am
+++ b/libxfce4panel/Makefile.am
@@ -34,9 +34,9 @@ libxfce4panel_la_SOURCES = \
 	$(libxfce4panel_built_sources) \
 	$(libxfce4panel_headers) \
 	xfce-arrow-button.c \
+	xfce-blink-button.c \
+	xfce-blink-button.h \
 	xfce-hvbox.c \
-	xfce-panel-button.c \
-	xfce-panel-button.h \
 	xfce-panel-convenience.c \
 	xfce-panel-plugin.c \
 	xfce-panel-plugin-provider.c \
