Initial version of the window menu plugin (the old window list).
Most of the code is working, new way of urgentcy notification is
not full working yet. Properties dialog is not working at all.

--- a/configure.in.in
+++ b/configure.in.in
@@ -238,5 +238,6 @@ plugins/separator/Makefile
 plugins/showdesktop/Makefile
 plugins/systray/Makefile
 plugins/tasklist/Makefile
+plugins/windowmenu/Makefile
 po/Makefile.in
 ])
