--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -7,6 +7,7 @@ SUBDIRS = \
 	separator \
 	showdesktop \
 	systray \
-	tasklist
+	tasklist \
+	windowmenu
 
 # vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
