Make sure we link to the dbus libs for GPtrArray type.

--- a/plugins/launcher/Makefile.am
+++ b/plugins/launcher/Makefile.am
@@ -33,6 +33,7 @@ liblauncher_la_CFLAGS = \
 	$(LIBXFCE4MENU_CFLAGS) \
 	$(EXO_CFLAGS) \
 	$(XFCONF_CFLAGS) \
+	$(DBUS_CFLAGS) \
 	$(PLATFORM_CFLAGS)
 
 liblauncher_la_LDFLAGS = \
@@ -48,6 +49,7 @@ liblauncher_la_LIBADD = \
 	$(LIBXFCE4UI_LIBS) \
 	$(LIBXFCE4MENU_LIBS) \
 	$(EXO_LIBS) \
+	$(DBUS_LIBS) \
 	$(XFCONF_LIBS)
 
 liblauncher_la_DEPENDENCIES = \
