--- a/panel-desktop-handler.desktop.in
+++ b/panel-desktop-handler.desktop.in
@@ -5,7 +5,7 @@ _Name=Create Launcher on Xfce Panel
 _Comment=Create a new launcher on the Xfce Panel
 _GenericName=Create Launcher on Xfce Panel
 TryExec=xfce4-panel
-Exec=xfce4-panel --add=launcher %F
+Exec=xfce4-panel --add=launcher '%F'
 Icon=application-x-executable
 Terminal=false
 Hidden=true
