Import the action buttons plugin.

--- a/configure.in.in
+++ b/configure.in.in
@@ -231,6 +231,7 @@ libxfce4panel/libxfce4panel-1.0.pc
 panel/Makefile
 wrapper/Makefile
 plugins/Makefile
+plugins/actions/Makefile
 plugins/clock/Makefile
 plugins/launcher/Makefile
 plugins/pager/Makefile
