Fix maintainer blocks in Makefiles to fix autogen warnings.

--- a/plugins/actions/Makefile.am
+++ b/plugins/actions/Makefile.am
@@ -45,17 +45,6 @@ libactions_la_LIBADD = \
 libactions_la_DEPENDENCIES = \
 	$(top_builddir)/libxfce4panel/libxfce4panel.la
 
-if MAINTAINER_MODE
-BUILT_SOURCES = \
-	$(libactions_built_sources)
-
-DISTCLEANFILES = \
-	$(libactions_built_sources)
-
-actions-dialog_glade.h: actions-dialog.glade
-	exo-csource --static --strip-comments --strip-content --name=actions_dialog_glade $< >$@
-endif
-
 #
 # .desktop file
 #
@@ -74,5 +63,16 @@ EXTRA_DIST = \
 DISTCLEANFILES = \
 	$(desktop_DATA) \
 	$(desktop_in_files)
+
+if MAINTAINER_MODE
+BUILT_SOURCES = \
+	$(libactions_built_sources)
+
+DISTCLEANFILES += \
+	$(libactions_built_sources)
+
+actions-dialog_glade.h: actions-dialog.glade
+	exo-csource --static --strip-comments --strip-content --name=actions_dialog_glade $< >$@
+endif
 
 # vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
