--- a/plugins/clock/Makefile.am
+++ b/plugins/clock/Makefile.am
@@ -55,17 +55,6 @@ libclock_la_LIBADD = \
 libclock_la_DEPENDENCIES = \
 	$(top_builddir)/libxfce4panel/libxfce4panel.la
 
-if MAINTAINER_MODE
-BUILT_SOURCES = \
-	$(libclock_built_sources)
-
-DISTCLEANFILES = \
-	$(libclock_built_sources)
-
-clock-dialog_glade.h: clock-dialog.glade
-	exo-csource --static --strip-comments --strip-content --name=clock_dialog_glade $< >$@
-endif
-
 #
 # .desktop file
 #
@@ -84,5 +73,16 @@ EXTRA_DIST = \
 DISTCLEANFILES = \
 	$(desktop_DATA) \
 	$(desktop_in_files)
+
+if MAINTAINER_MODE
+BUILT_SOURCES = \
+	$(libclock_built_sources)
+
+DISTCLEANFILES += \
+	$(libclock_built_sources)
+
+clock-dialog_glade.h: clock-dialog.glade
+	exo-csource --static --strip-comments --strip-content --name=clock_dialog_glade $< >$@
+endif
 
 # vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
