--- a/plugins/pager/Makefile.am
+++ b/plugins/pager/Makefile.am
@@ -48,17 +48,6 @@ libpager_la_LIBADD = \
 libpager_la_DEPENDENCIES = \
 	$(top_builddir)/libxfce4panel/libxfce4panel.la
 
-if MAINTAINER_MODE
-BUILT_SOURCES = \
-	$(libpager_built_sources)
-
-DISTCLEANFILES = \
-	$(libpager_built_sources)
-
-pager-dialog_glade.h: pager-dialog.glade
-	exo-csource --static --strip-comments --strip-content --name=pager_dialog_glade $< >$@
-endif
-
 #
 # .desktop file
 #
@@ -77,5 +66,16 @@ EXTRA_DIST = \
 DISTCLEANFILES = \
 	$(desktop_DATA) \
 	$(desktop_in_files)
+
+if MAINTAINER_MODE
+BUILT_SOURCES = \
+	$(libpager_built_sources)
+
+DISTCLEANFILES += \
+	$(libpager_built_sources)
+
+pager-dialog_glade.h: pager-dialog.glade
+	exo-csource --static --strip-comments --strip-content --name=pager_dialog_glade $< >$@
+endif
 
 # vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
