--- a/plugins/tasklist/Makefile.am
+++ b/plugins/tasklist/Makefile.am
@@ -49,17 +49,6 @@ libtasklist_la_LIBADD = \
 libtasklist_la_DEPENDENCIES = \
 	$(top_builddir)/libxfce4panel/libxfce4panel.la
 
-if MAINTAINER_MODE
-BUILT_SOURCES = \
-	$(libtasklist_built_sources)
-
-DISTCLEANFILES = \
-	$(libtasklist_built_sources)
-
-tasklist-dialog_glade.h: tasklist-dialog.glade
-	exo-csource --static --strip-comments --strip-content --name=tasklist_dialog_glade $< >$@
-endif
-
 #
 # .desktop file
 #
@@ -78,5 +67,16 @@ EXTRA_DIST = \
 DISTCLEANFILES = \
 	$(desktop_DATA) \
 	$(desktop_in_files)
+
+if MAINTAINER_MODE
+BUILT_SOURCES = \
+	$(libtasklist_built_sources)
+
+DISTCLEANFILES += \
+	$(libtasklist_built_sources)
+
+tasklist-dialog_glade.h: tasklist-dialog.glade
+	exo-csource --static --strip-comments --strip-content --name=tasklist_dialog_glade $< >$@
+endif
 
 # vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
