--- a/plugins/windowmenu/Makefile.am
+++ b/plugins/windowmenu/Makefile.am
@@ -48,17 +48,6 @@ libwindowmenu_la_LIBADD = \
 libwindowmenu_la_DEPENDENCIES = \
 	$(top_builddir)/libxfce4panel/libxfce4panel.la
 
-if MAINTAINER_MODE
-BUILT_SOURCES = \
-	$(libwindowmenu_built_sources)
-
-DISTCLEANFILES = \
-	$(libwindowmenu_built_sources)
-
-windowmenu-dialog_glade.h: windowmenu-dialog.glade
-	exo-csource --static --strip-comments --strip-content --name=windowmenu_dialog_glade $< >$@
-endif
-
 #
 # .desktop file
 #
@@ -77,5 +66,16 @@ EXTRA_DIST = \
 DISTCLEANFILES = \
 	$(desktop_DATA) \
 	$(desktop_in_files)
+
+if MAINTAINER_MODE
+BUILT_SOURCES = \
+	$(libwindowmenu_built_sources)
+
+DISTCLEANFILES += \
+	$(libwindowmenu_built_sources)
+
+windowmenu-dialog_glade.h: windowmenu-dialog.glade
+	exo-csource --static --strip-comments --strip-content --name=windowmenu_dialog_glade $< >$@
+endif
 
 # vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
