Rename the .desktop entry X-XFCE-External to X-XFCE-Internal.
This makes it more obvious plugins are external by default.

--- a/plugins/actions/actions.desktop.in.in
+++ b/plugins/actions/actions.desktop.in.in
@@ -6,4 +6,4 @@ _Comment=Log out, lock or other system actions
 Icon=system-log-out
 X-XFCE-Module=actions
 X-XFCE-Module-Path=@libdir@/xfce4/panel-plugins
-X-XFCE-External=FALSE
+X-XFCE-Internal=TRUE
