--- a/plugins/launcher/launcher.desktop.in.in
+++ b/plugins/launcher/launcher.desktop.in.in
@@ -6,4 +6,4 @@ _Comment=Program launcher with optional menu
 Icon=application-x-executable
 X-XFCE-Module=launcher
 X-XFCE-Module-Path=@libdir@/xfce4/panel-plugins
-X-XFCE-External=FALSE
+X-XFCE-Internal=TRUE
