--- a/plugins/separator/separator.desktop.in.in
+++ b/plugins/separator/separator.desktop.in.in
@@ -6,4 +6,4 @@ _Comment=Adds a separator or space between panel items
 Icon=gtk-remove
 X-XFCE-Module=separator
 X-XFCE-Module-Path=@libdir@/xfce4/panel-plugins
-X-XFCE-External=FALSE
+X-XFCE-Internal=TRUE
