--- a/plugins/showdesktop/showdesktop.desktop.in.in
+++ b/plugins/showdesktop/showdesktop.desktop.in.in
@@ -6,4 +6,4 @@ _Comment=Toggle button that hides all windows and shows the desktop
 Icon=user-desktop
 X-XFCE-Module=showdesktop
 X-XFCE-Module-Path=@libdir@/xfce4/panel-plugins
-X-XFCE-External=FALSE
+X-XFCE-Internal=TRUE
