--- a/plugins/tasklist/tasklist.desktop.in.in
+++ b/plugins/tasklist/tasklist.desktop.in.in
@@ -6,4 +6,4 @@ _Comment=Show all running applications
 Icon=preferences-system-windows
 X-XFCE-Module=tasklist
 X-XFCE-Module-Path=@libdir@/xfce4/panel-plugins
-X-XFCE-External=FALSE
+X-XFCE-Internal=TRUE
