--- a/plugins/pager/pager.desktop.in.in
+++ b/plugins/pager/pager.desktop.in.in
@@ -6,4 +6,4 @@ _Comment=Miniature view of all virtual desktops
 Icon=xfce4-workspaces
 X-XFCE-Module=pager
 X-XFCE-Module-Path=@libdir@/xfce4/panel-plugins
-X-XFCE-External=FALSE
+X-XFCE-Internal=TRUE
