--- a/plugins/windowmenu/windowmenu.desktop.in.in
+++ b/plugins/windowmenu/windowmenu.desktop.in.in
@@ -6,4 +6,4 @@ _Comment=Switch between open windows using a menu
 Icon=preferences-system-windows
 X-XFCE-Module=windowmenu
 X-XFCE-Module-Path=@libdir@/xfce4/panel-plugins
-X-XFCE-External=FALSE
+X-XFCE-Internal=TRUE
