Backport the tray widget object.
Positioning with a GtkFixed was not suitable for positioning
icons, because the request -> allocation part is very important
here. Rename the object from XfceTrayWidget to SystrayBox.

--- a/plugins/systray/Makefile.am
+++ b/plugins/systray/Makefile.am
@@ -21,6 +21,8 @@ libsystray_la_SOURCES = \
 	$(libsystray_built_sources) \
 	systray.c \
 	systray.h \
+	systray-box.c \
+	systray-box.h \
 	systray-manager.c \
 	systray-manager.h
 
