Improved panel window code.
Not entirely finished but good enough for normal usage. The code
basically splits the window layer in two: a base window class that
is used for the normal window and the auto hide window and
a panel window class.
The screen positioning code has been improved too and should work
a lot better with multi screen setups and randr.

Also dropped the last bits of the glue code.

--- a/panel/Makefile.am
+++ b/panel/Makefile.am
@@ -27,14 +27,14 @@ xfce4_panel_SOURCES = \
 	main.c \
 	panel-application.c \
 	panel-application.h \
+	panel-base-window.c \
+	panel-base-window.h \
 	panel-dbus-client.c \
 	panel-dbus-client.h \
 	panel-dbus-service.c \
 	panel-dbus-service.h \
 	panel-dialogs.c \
 	panel-dialogs.h \
-	panel-glue.c \
-	panel-glue.h \
 	panel-item-dialog.c \
 	panel-item-dialog.h \
 	panel-itembar.c \
