Support transparent status icon.
Use code from the Gnome panel to support transparent tray icon.

--- a/plugins/systray/Makefile.am
+++ b/plugins/systray/Makefile.am
@@ -24,7 +24,9 @@ libsystray_la_SOURCES = \
 	systray-box.c \
 	systray-box.h \
 	systray-manager.c \
-	systray-manager.h
+	systray-manager.h \
+	systray-socket.c \
+	systray-socket.h
 
 libsystray_la_CFLAGS = \
 	$(LIBX11_CFLAGS) \
