Use the plugindir from the library in the desktop files.

--- a/plugins/launcher/launcher.desktop.in.in
+++ b/plugins/launcher/launcher.desktop.in.in
@@ -5,5 +5,5 @@ _Name=Launcher
 _Comment=Program launcher with optional menu
 Icon=application-x-executable
 X-XFCE-Module=launcher
-X-XFCE-Module-Path=@libdir@/xfce4/panel-plugins
+X-XFCE-Module-Path=@plugindir@
 X-XFCE-Internal=TRUE
