--- a/plugins/systray/systray.desktop.in.in
+++ b/plugins/systray/systray.desktop.in.in
@@ -5,5 +5,5 @@ _Name=Notification Area
 _Comment=Area where notification icons appear
 Icon=applications-system
 X-XFCE-Module=systray
-X-XFCE-Module-Path=@libdir@/xfce4/panel-plugins
+X-XFCE-Module-Path=@plugindir@
 X-XFCE-Internal=FALSE
