--- a/plugins/tasklist/tasklist.desktop.in.in
+++ b/plugins/tasklist/tasklist.desktop.in.in
@@ -5,5 +5,5 @@ _Name=Task List
 _Comment=Show all running applications
 Icon=preferences-system-windows
 X-XFCE-Module=tasklist
-X-XFCE-Module-Path=@libdir@/xfce4/panel-plugins
+X-XFCE-Module-Path=@plugindir@
 X-XFCE-Internal=TRUE
