--- a/plugins/actions/actions.desktop.in.in
+++ b/plugins/actions/actions.desktop.in.in
@@ -5,5 +5,5 @@ _Name=Action Buttons
 _Comment=Log out, lock or other system actions
 Icon=system-log-out
 X-XFCE-Module=actions
-X-XFCE-Module-Path=@libdir@/xfce4/panel-plugins
+X-XFCE-Module-Path=@plugindir@
 X-XFCE-Internal=TRUE
