--- a/plugins/clock/clock.desktop.in.in
+++ b/plugins/clock/clock.desktop.in.in
@@ -5,5 +5,5 @@ _Name=Clock
 _Comment=What time is it?
 Icon=office-calendar
 X-XFCE-Module=clock
-X-XFCE-Module-Path=@libdir@/xfce4/panel-plugins
+X-XFCE-Module-Path=@plugindir@
 X-XFCE-Internal=TRUE
