--- a/plugins/launcher/Makefile.am
+++ b/plugins/launcher/Makefile.am
@@ -10,8 +10,7 @@ INCLUDES = \
 	-DLOCALEDIR=\"$(localedir)\" \
 	$(PLATFORM_CPPFLAGS)
 
-plugindir = \
-	$(libdir)/xfce4/panel-plugins
+plugindir = $(libdir)/xfce4/panel-plugins
 
 plugin_LTLIBRARIES = \
 	liblauncher.la
@@ -62,7 +61,7 @@ desktopdir = $(datadir)/xfce4/panel-plugins
 desktop_in_in_files = launcher.desktop.in.in
 desktop_in_files = $(desktop_in_in_files:.desktop.in.in=.desktop.in)
 launcher.desktop.in: $(desktop_in_in_files)
-	sed -e "s,\@libdir\@,$(libdir),g" < $< > $@
+	sed -e "s,\@plugindir\@,$(plugindir),g" < $< > $@
 desktop_DATA = $(desktop_in_files:.desktop.in=.desktop)
 @INTLTOOL_DESKTOP_RULE@
 
