--- a/plugins/pager/pager.desktop.in.in
+++ b/plugins/pager/pager.desktop.in.in
@@ -5,5 +5,5 @@ _Name=Pager
 _Comment=Miniature view of all virtual desktops
 Icon=xfce4-workspaces
 X-XFCE-Module=pager
-X-XFCE-Module-Path=@libdir@/xfce4/panel-plugins
+X-XFCE-Module-Path=@plugindir@
 X-XFCE-Internal=TRUE
