--- a/plugins/separator/separator.desktop.in.in
+++ b/plugins/separator/separator.desktop.in.in
@@ -5,5 +5,5 @@ _Name=Separator
 _Comment=Adds a separator or space between panel items
 Icon=gtk-remove
 X-XFCE-Module=separator
-X-XFCE-Module-Path=@libdir@/xfce4/panel-plugins
+X-XFCE-Module-Path=@plugindir@
 X-XFCE-Internal=TRUE
