--- a/plugins/showdesktop/Makefile.am
+++ b/plugins/showdesktop/Makefile.am
@@ -8,8 +8,7 @@ INCLUDES = \
 	-DLOCALEDIR=\"$(localedir)\" \
 	$(PLATFORM_CPPFLAGS)
 
-plugindir = \
-	$(libdir)/xfce4/panel-plugins
+plugindir = $(libdir)/xfce4/panel-plugins
 
 plugin_LTLIBRARIES = \
 	libshowdesktop.la
@@ -46,7 +45,7 @@ desktopdir = $(datadir)/xfce4/panel-plugins
 desktop_in_in_files = showdesktop.desktop.in.in
 desktop_in_files = $(desktop_in_in_files:.desktop.in.in=.desktop.in)
 showdesktop.desktop.in: $(desktop_in_in_files)
-	sed -e "s,\@libdir\@,$(libdir),g" < $< > $@
+	sed -e "s,\@plugindir\@,$(plugindir),g" < $< > $@
 desktop_DATA = $(desktop_in_files:.desktop.in=.desktop)
 @INTLTOOL_DESKTOP_RULE@
 
