--- a/plugins/showdesktop/showdesktop.desktop.in.in
+++ b/plugins/showdesktop/showdesktop.desktop.in.in
@@ -5,5 +5,5 @@ _Name=Show Desktop
 _Comment=Toggle button that hides all windows and shows the desktop
 Icon=user-desktop
 X-XFCE-Module=showdesktop
-X-XFCE-Module-Path=@libdir@/xfce4/panel-plugins
+X-XFCE-Module-Path=@plugindir@
 X-XFCE-Internal=TRUE
