--- a/plugins/windowmenu/windowmenu.desktop.in.in
+++ b/plugins/windowmenu/windowmenu.desktop.in.in
@@ -5,5 +5,5 @@ _Name=Window Menu
 _Comment=Switch between open windows using a menu
 Icon=preferences-system-windows
 X-XFCE-Module=windowmenu
-X-XFCE-Module-Path=@libdir@/xfce4/panel-plugins
+X-XFCE-Module-Path=@plugindir@
 X-XFCE-Internal=TRUE
