Add custom xfconf property bindings.
The goals of these bindings is speeding up the panel startup.
The bindings can optionally take a hash table for searching
properties, this way the panel only has to call dbus once
during startup for panel settings.

--- a/common/Makefile.am
+++ b/common/Makefile.am
@@ -2,6 +2,8 @@
 
 EXTRA_DIST = \
 	panel-dbus.h \
-	panel-private.h
+	panel-private.h \
+	panel-xfconf.c \
+	panel-xfconf.h
 
 # vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
