Fix configure warning that the datarootdir is ignored.

--- a/libxfce4panel/libxfce4panel-1.0.pc.in
+++ b/libxfce4panel/libxfce4panel-1.0.pc.in
@@ -5,6 +5,7 @@ libdir=@libdir@
 includedir=@includedir@
 libexecdir=@libexecdir@
 localedir=@localedir@
+datarootdir=@datarootdir@
 
 Name: libxfce4panel
 Description: Library for the Xfce Panel
