Use custom bindings in separator plugin.

--- a/plugins/separator/Makefile.am
+++ b/plugins/separator/Makefile.am
@@ -36,6 +36,7 @@ libseparator_la_LDFLAGS = \
 
 libseparator_la_LIBADD = \
 	$(top_builddir)/libxfce4panel/libxfce4panel.la \
+	$(top_builddir)/common/libpanel-xfconf.la \
 	$(GTK_LIBS) \
 	$(CAIRO_LIBS) \
 	$(LIBXFCE4UTIL_LIBS) \
@@ -44,7 +45,8 @@ libseparator_la_LIBADD = \
 	$(XFCONF_LIBS)
 
 libseparator_la_DEPENDENCIES = \
-	$(top_builddir)/libxfce4panel/libxfce4panel.la
+	$(top_builddir)/libxfce4panel/libxfce4panel.la \
+	$(top_builddir)/common/libpanel-xfconf.la
 
 #
 # .desktop file
