Link to the noinst library.

--- a/panel/Makefile.am
+++ b/panel/Makefile.am
@@ -24,8 +24,6 @@ xfce4_panel_built_sources = \
 
 xfce4_panel_SOURCES = \
 	$(xfce4_panel_built_sources) \
-	$(top_srcdir)/common/panel-xfconf.c \
-	$(top_srcdir)/common/panel-xfconf.h \
 	main.c \
 	panel-application.c \
 	panel-application.h \
@@ -69,6 +67,7 @@ xfce4_panel_LDFLAGS = \
 
 xfce4_panel_LDADD = \
 	$(top_builddir)/libxfce4panel/libxfce4panel.la \
+	$(top_builddir)/common/libpanel-xfconf.la \
 	$(GTK_LIBS) \
 	$(EXO_LIBS) \
 	$(GMODULE_LIBS) \
@@ -79,7 +78,8 @@ xfce4_panel_LDADD = \
 	$(DBUS_LIBS)
 
 xfce4_panel_DEPENDENCIES = \
-	$(top_builddir)/libxfce4panel/libxfce4panel.la
+	$(top_builddir)/libxfce4panel/libxfce4panel.la \
+	$(top_builddir)/common/libpanel-xfconf.la
 
 if MAINTAINER_MODE
 
