Update pot file and fix non-translatable strings.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -2,6 +2,7 @@ libxfce4panel/xfce-arrow-button.c
 libxfce4panel/xfce-panel-macros.h
 libxfce4panel/xfce-panel-plugin-provider.c
 libxfce4panel/xfce-panel-plugin.c
+
 panel/main.c
 panel/panel-application.c
 panel/panel-dbus-service.c
@@ -9,28 +10,37 @@ panel/panel-dialogs.c
 panel/panel-item-dialog.c
 panel/panel-module-factory.c
 panel/panel-plugin-external.c
+panel/panel-preferences-dialog.c
 panel/panel-window.c
-plugins/clock/clock-fuzzy.c
-plugins/launcher/launcher.c
-plugins/showdesktop/showdesktop.c
-plugins/systray/xfce-tray-dialogs.c
-plugins/systray/xfce-tray-manager.c
-plugins/systray/xfce-tray-plugin.c
-plugins/systray/xfce-tray-widget.c
-wrapper/main.c
 
-panel-desktop-handler.desktop.in
+plugins/actions/actions.c
+plugins/clock/clock-fuzzy.c
+plugins/launcher/launcher-dialog.c
+plugins/launcher/launcher.c
+plugins/pager/pager.c
+plugins/showdesktop/showdesktop.c
+plugins/systray/systray-manager.c
+plugins/systray/systray.c
+plugins/windowmenu/windowmenu.c
+
 panel-preferences.desktop.in
-plugins/clock/clock.desktop.in.in
+panel-desktop-handler.desktop.in
+plugins/actions/actions.desktop.in.in
 plugins/launcher/launcher.desktop.in.in
-plugins/pager/pager.desktop.in.in
-plugins/separator/separator.desktop.in.in
 plugins/showdesktop/showdesktop.desktop.in.in
-plugins/systray/systray.desktop.in.in
+plugins/separator/separator.desktop.in.in
+plugins/windowmenu/windowmenu.desktop.in.in
 plugins/tasklist/tasklist.desktop.in.in
+plugins/pager/pager.desktop.in.in
+plugins/clock/clock.desktop.in.in
+plugins/systray/systray.desktop.in.in
 
 panel/panel-preferences-dialog.glade
+plugins/actions/actions-dialog.glade
 plugins/launcher/launcher-dialog.glade
-plugins/clock/clock-dialog.glade
 plugins/separator/separator-dialog.glade
+plugins/windowmenu/windowmenu-dialog.glade
 plugins/tasklist/tasklist-dialog.glade
+plugins/pager/pager-dialog.glade
+plugins/clock/clock-dialog.glade
+plugins/systray/systray-dialog.glade
