Update desktop files.
There is no path in the desktop files anymore, so
drop the X-XFCE-Module-Path entry and rename the
files to *.in, because we do not have to edit it
during building.

--- a/plugins/launcher/Makefile.am
+++ b/plugins/launcher/Makefile.am
@@ -60,10 +60,7 @@ liblauncher_la_DEPENDENCIES = \
 # .desktop file
 #
 desktopdir = $(datadir)/xfce4/panel-plugins
-desktop_in_in_files = launcher.desktop.in.in
-desktop_in_files = $(desktop_in_in_files:.desktop.in.in=.desktop.in)
-launcher.desktop.in: $(desktop_in_in_files)
-	sed -e "s,\@plugindir\@,$(plugindir),g" < $< > $@
+desktop_in_files = launcher.desktop.in
 desktop_DATA = $(desktop_in_files:.desktop.in=.desktop)
 @INTLTOOL_DESKTOP_RULE@
 
@@ -76,11 +73,10 @@ menu_DATA = launcher.menu
 EXTRA_DIST = \
 	launcher-dialog.glade \
 	$(menu_DATA) \
-	$(desktop_in_in_files)
+	$(desktop_in_files)
 
 DISTCLEANFILES = \
-	$(desktop_DATA) \
-	$(desktop_in_files)
+	$(desktop_DATA)
 
 if MAINTAINER_MODE
 BUILT_SOURCES = \
