--- a/plugins/windowmenu/Makefile.am
+++ b/plugins/windowmenu/Makefile.am
@@ -53,20 +53,16 @@ libwindowmenu_la_DEPENDENCIES = \
 # .desktop file
 #
 desktopdir = $(datadir)/xfce4/panel-plugins
-desktop_in_in_files = windowmenu.desktop.in.in
-desktop_in_files =  $(desktop_in_in_files:.desktop.in.in=.desktop.in)
-windowmenu.desktop.in: $(desktop_in_in_files)
-	sed -e "s,\@plugindir\@,$(plugindir),g" < $< > $@
+desktop_in_files = windowmenu.desktop.in
 desktop_DATA = $(desktop_in_files:.desktop.in=.desktop)
 @INTLTOOL_DESKTOP_RULE@
 
 EXTRA_DIST = \
 	windowmenu-dialog.glade \
-	$(desktop_in_in_files)
+	$(desktop_in_files)
 
 DISTCLEANFILES = \
-	$(desktop_DATA) \
-	$(desktop_in_files)
+	$(desktop_DATA)
 
 if MAINTAINER_MODE
 BUILT_SOURCES = \
