--- a/plugins/clock/Makefile.am
+++ b/plugins/clock/Makefile.am
@@ -60,20 +60,16 @@ libclock_la_DEPENDENCIES = \
 # .desktop file
 #
 desktopdir = $(datadir)/xfce4/panel-plugins
-desktop_in_in_files =	clock.desktop.in.in
-desktop_in_files = $(desktop_in_in_files:.desktop.in.in=.desktop.in)
-clock.desktop.in: $(desktop_in_in_files)
-	sed -e "s,\@plugindir\@,$(plugindir),g" < $< > $@
+desktop_in_files =	clock.desktop.in
 desktop_DATA = $(desktop_in_files:.desktop.in=.desktop)
 @INTLTOOL_DESKTOP_RULE@
 
 EXTRA_DIST = \
 	clock-dialog.glade \
-	$(desktop_in_in_files)
+	$(desktop_in_files)
 
 DISTCLEANFILES = \
-	$(desktop_DATA) \
-	$(desktop_in_files)
+	$(desktop_DATA)
 
 if MAINTAINER_MODE
 BUILT_SOURCES = \
