--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -25,22 +25,22 @@ plugins/windowmenu/windowmenu.c
 
 panel-preferences.desktop.in
 panel-desktop-handler.desktop.in
-plugins/actions/actions.desktop.in.in
-plugins/launcher/launcher.desktop.in.in
-plugins/showdesktop/showdesktop.desktop.in.in
-plugins/separator/separator.desktop.in.in
-plugins/windowmenu/windowmenu.desktop.in.in
-plugins/tasklist/tasklist.desktop.in.in
-plugins/pager/pager.desktop.in.in
-plugins/clock/clock.desktop.in.in
-plugins/systray/systray.desktop.in.in
+plugins/actions/actions.desktop.in
+plugins/launcher/launcher.desktop.in
+plugins/showdesktop/showdesktop.desktop.in
+plugins/separator/separator.desktop.in
+plugins/windowmenu/windowmenu.desktop.in
+plugins/tasklist/tasklist.desktop.in
+plugins/pager/pager.desktop.in
+plugins/clock/clock.desktop.in
+plugins/systray/systray.desktop.in
 
-panel/panel-preferences-dialog.glade
-plugins/actions/actions-dialog.glade
-plugins/launcher/launcher-dialog.glade
-plugins/separator/separator-dialog.glade
-plugins/windowmenu/windowmenu-dialog.glade
-plugins/tasklist/tasklist-dialog.glade
-plugins/pager/pager-dialog.glade
-plugins/clock/clock-dialog.glade
-plugins/systray/systray-dialog.glade
+panel/panel-preferences-dialog.ui
+plugins/actions/actions-dialog.ui
+plugins/launcher/launcher-dialog.ui
+plugins/separator/separator-dialog.ui
+plugins/windowmenu/windowmenu-dialog.uilade
+plugins/tasklist/tasklist-dialog.ui
+plugins/pager/pager-dialog.ui
+plugins/clock/clock-dialog.ui
+plugins/systray/systray-dialog.ui
